--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "aos": "^2.3.4",
     "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
