--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "prism-react-renderer": "^2.3.1",
@@ -23,12 +25,21 @@
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-formatjs": "^4.13.3",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-perfectionist": "^2.11.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
     "typescript": "^5"
   }
 }
